--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 #ignore config file
 config.js
 
+/Earthquake_Challenge/static/js/challenge_logic_Attempt.js
+/Earthquake_Challenge/static/js/challenge_logic3.js
+/Earthquake_Challenge/static/js/logic.js
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
